Update issue templates

--- a/.github/ISSUE_TEMPLATE/i18n.md
+++ b/.github/ISSUE_TEMPLATE/i18n.md
@@ -1,8 +1,8 @@
 ---
-name: 🌐 Translating a new language?
+name: "\U0001F310 Translating a new language?"
 about: Start a new translation effort in your language
-title: '[i18n-<languageCode>] Translating docs to <languageName>'
-labels: WIP
+title: "[i18n-<languageCode>] Translating docs to <languageName>"
+labels: ''
 assignees: ''
 
 ---
